fixed double scroll and background

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,10 +5,11 @@
   background-image: url('~/public/static/images/background-corner.svg');
   background-repeat: no-repeat;
   background-position: top right;
-  overflow: auto;
   box-sizing: border-box;
+  overflow: auto;
   margin: 0;
   padding: 0;
+  padding-top: 2rem;
 }
 
 
