--- a/src/App/pages/HomePage/components/RecipesList/components/Card/Card.module.scss
+++ b/src/App/pages/HomePage/components/RecipesList/components/Card/Card.module.scss
@@ -38,7 +38,7 @@
 
 @media screen and (max-width: 480px) {
   .card {
-    width: 174px;
+    width: 300px;
     height: 100px;
     padding-bottom: 3rem;
   }
